--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             theme: {
                 extend: {
                     colors: {
-                        clifford: '#da373d',
+                        'gradiant-start': '#FF8938',
+                        'gradiant-end': '#F00',
                     }
                 }
             }
@@ -35,23 +36,26 @@
 
 <body class="font-manrope">
     <header class="conyainer mx-auto">
-        <div class="hero">
-            <div class="hero-content flex-col lg:flex-row">
+        <div class="my-20">
+            <div class="flex justify-between items-center flex-col lg:flex-row">
 
                 <div>
                     <h1 class="text-7xl font-extrabold">It's good <br>
                         tea time at The <br> Tea House</h1>
                     <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
                     </p>
-                    <button class="btn btn-primary">Explore More</button>
+                    <button class="btn bg-gradient-to-r from-gradiant-start to-gradiant-end text-white">
+                        Explore More
+                        <i class="fa-solid fa-arrow-up-right"></i>
+                    </button>
                 </div>
 
                 <div>
-                    <img src="/images//banner.png" class="max-w-sm" />
+                    <img src="/images//banner.png" class="" />
                     <!-- ratting badge -->
                     <div class=" -mt-14 flex items-center gap-4 p-5 w-60 drop-shadow-lg bg-white">
                         <i class="fa-solid fa-star text-3xl
-                     bg-amber-400"></i>
+                     text-amber-400"></i>
                         <div>
                             <h3 class="text-3xl">5.00</h3>
                             <p>Trust Pilot Ratings</p>
@@ -146,13 +150,13 @@
 
         </section>
         <!-- supper client section -->
-        <section class="my-24 flex flex-col lg:flex-row gap-12 rounded-xl bg-gradient-to-r from-[#FF8938]  to-[#F00] px-16 py-24">
+        <section class="my-24 flex flex-col lg:flex-row gap-12 rounded-xl bg-gradient-to-r from-gradiant-start to-gradiant-end px-16 py-24">
             <div class="flex items-center lg:pr-28">
                 <div class="space-y-5>
                     <h2 class="text-5xl font-extrabold text-white">Meet Our Super <br>
                         Clients</h2>
                         <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-                       <button class="btn">Show All</button>
+                       <button class="btn bg-gradient-to-r from-gradian-start   to-gradiant-end text-white">Show All</button>
    
                 </div>
             </div>
@@ -195,10 +199,58 @@
         </section>
 
     </main>
-    <footer>
+    <!-- footer section start -->
+    <footer class="px-4 lg:px-48 py-10 bg-base-200 text-base-content">
+        <div class="flex justify-between my-24">
+            <img src="images//cup.png" alt="">
+            <p>
+                <span>Ready to get strated?</span>
+                <button class="btn bg-gradient-to-r from-gradiant-start to-gradiant-end text-white">Get Started</button>
+            </p>
+        </div>
+        <div  class="footer">
+            <div>
+                <span class="footer-title">Services</span> 
+                <a class="link link-hover">Branding</a> 
+                <a class="link link-hover">Design</a> 
+                <a class="link link-hover">Marketing</a> 
+                <a class="link link-hover">Advertisement</a>
+              </div> 
+              <div>
+                <span class="footer-title">Company</span> 
+                <a class="link link-hover">About us</a> 
+                <a class="link link-hover">Contact</a> 
+                <a class="link link-hover">Jobs</a> 
+                <a class="link link-hover">Press kit</a>
+              </div> 
+              <div>
+                <span class="footer-title">Legal</span> 
+                <a class="link link-hover">Terms of use</a> 
+                <a class="link link-hover">Privacy policy</a> 
+                <a class="link link-hover">Cookie policy</a>
+              </div> 
+              <div>
+                <span class="footer-title">Newsletter</span> 
+                <div class="form-control w-80">
+                  <label class="label">
+                    <span class="label-text">Enter your email address</span>
+                  </label> 
+                  <div class="relative">
+                    <input type="text" placeholder="username@site.com"
+                     class="py-4 bg-transparent border-b-2 border-black outline-none" /> 
+                    <button class="btn absolute top-0 right-0 rounded-full text-white bg-gradient-to-r from-gradian   to-gradiant-end">
+                        <i class="fa-solid fa-angle-right"></i>
+                    </button>
+                  </div>
+                </div>
+              </div>
+        </div>
+        <div class="mt-10 text-center">
+            <p>Copyright © 2023 - All right reserved by ACME Industries Ltd</p>
+          </div>
+      </footer>
 
-    </footer>
-
+     
 </body>
 
 </html>
